fix: header darkmode alignment

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -26,7 +26,7 @@
 }
 
 .toggle-button {
-  margin-left: 90vw;
+  justify-self: flex-end;
 }
 
 ::ng-deep .active-menu-item {
